(upd) tablesorter ; bootstrap (add) Mixin webfont en raccourci à font-face (mod) Possibilité de spécifier la présence/taille des bordures dans les dégradés automatiques (fix) Remove hardware acceleration for Webkits (fix) Couleur $main par défaut (code) Simplification de text-drop via l'utilisation de fonctions de contraste

--- a/assets/cerberus/sass/base/_color.sass
+++ b/assets/cerberus/sass/base/_color.sass
@@ -22,7 +22,7 @@ $green   : #859900
 // Color System
 
 $cerberus   : $base02
-$main       : $base01
+$main       : $base01 !default
 
 $textColor  : contrast-color($main) !default
 $main-light : lighten($main, 15)
