--- a/assets/cerberus/sass/base/_framework.sass
+++ b/assets/cerberus/sass/base/_framework.sass
@@ -22,7 +22,9 @@ $contrasted-light-default            : darken(white, 20)
 $contrasted-lightness-threshold      : 40%
 
 // Gradients
-$cerberus-gradient-span              : 5%
+$cerberus-gradient-span              : 5% !default
+$cerberus-gradient-borders           : 1px !default
+
 
 // Options
 $legacy-support-for-ie6              : false
