--- a/assets/cerberus/sass/bootstrap/_responsive-767px-max.sass
+++ b/assets/cerberus/sass/bootstrap/_responsive-767px-max.sass
@@ -109,7 +109,7 @@
   [class*="span"],
   .row-fluid [class*="span"]
     float: none
-    display: block
+    display: inline-block
     width: auto
     margin-left: 0
 
